--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,7 +10,7 @@ website:
 
   page-footer: 
     border: true
-    left: "Your_Name 2024©"
+    left: "Joshua Howard 2025©"
     right: 
       - icon: linkedin
         href: Your_LinkedIn_URL
